--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,9 @@
+html{
+  font-size: 50%;
+  font-size: calc(1em * 0.5);
+  /* 1em = 8px */
+  }
+
 @font-face {
     font-family: "Fellix Light";
     src: url("../fonts/Fellix-Light.ttf");
