Ajout du main_container dans le style.css

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13,6 +13,22 @@ html{
   --grey-color: #f1f1f1;
   }
 
+/* Container = 1642px de largeur pour avoir la même partout */
+.main_container{
+  max-width: 1642px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 375px){
+  .main_container{
+      max-width: 302px;
+  }
+}
+
+/* --------------- */
+
+
+/* Intégration des polices */
 @font-face {
     font-family: "Fellix Light";
     src: url("../fonts/Fellix-Light.ttf");
@@ -42,3 +58,5 @@ html{
     font-family: "Fellix Bold";
     src: url("../fonts/Fellix-Bold.ttf");
   }
+
+  /* --------------- */
