--- a/src/assets/css/createguide.css
+++ b/src/assets/css/createguide.css
@@ -1,6 +1,5 @@
 .createguide{
     background-color: #fff;
-    height: 100vh;
     padding-top: 4em;
     padding-bottom: 4em;
     margin: 0;
@@ -33,8 +32,7 @@
 
 .createguide fieldset{
     border:none;
-    width: 45%;
-    margin-bottom: 4em;
+    width: 100%;
     margin-right: 1.6em;
 }
 
@@ -46,6 +44,7 @@
 
 .createguide input{
     margin-top: 1.6em;
+    margin-bottom: 1.6em;
     width: 100%;
     background-color:var(--grey-color);
     border:none;
@@ -56,3 +55,21 @@
     font-size: 1.6em;
     font-family: 'Fellix Regular';
 } 
+
+
+.createguide-error{
+    background-color: var(--primary-color);
+    padding: 1.6em;
+}
+
+.createguide-error b {
+    color: #fff;
+    font-family: 'Fellix SemiBold';
+    font-size: 2.4em;
+}
+
+.createguide-error li{
+    color: #fff;
+    font-size: 1.6em;
+    font-family: 'Fellix Regular';
+}
