--- a/src/assets/css/backpoi.css
+++ b/src/assets/css/backpoi.css
@@ -22,6 +22,18 @@
 .poi__back__card__container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.resultats {
+    font-size: 1.6em;
+    color: var(--secondary-color);
+    font-family: 'Fellix Bold';
+}
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;  
 }
 
 /* RESPONSIVE */
